--- a/test/methods.html
+++ b/test/methods.html
@@ -14,24 +14,27 @@
   <script src="../assets/js/jquery.min.js"></script>
   <script src="../dist/cropper.js"></script>
   <script src="js/main.js"></script>
-  <script src="methods/destroy.js"></script>
-  <script src="methods/move.js"></script>
-  <script src="methods/setAspectRatio.js"></script>
   <script src="methods/crop.js"></script>
   <script src="methods/reset.js"></script>
   <script src="methods/clear.js"></script>
   <script src="methods/replace.js"></script>
   <script src="methods/enable.js"></script>
   <script src="methods/disable.js"></script>
+  <script src="methods/destroy.js"></script>
+  <script src="methods/move.js"></script>
   <script src="methods/zoom.js"></script>
   <script src="methods/rotate.js"></script>
   <script src="methods/scale.js"></script>
   <script src="methods/getData.js"></script>
   <script src="methods/setData.js"></script>
+  <script src="methods/getContainerData.js"></script>
   <script src="methods/getImageData.js"></script>
+  <script src="methods/getCanvasData.js"></script>
+  <script src="methods/setCanvasData.js"></script>
   <script src="methods/getCropBoxData.js"></script>
   <script src="methods/setCropBoxData.js"></script>
   <script src="methods/getCroppedCanvas.js"></script>
+  <script src="methods/setAspectRatio.js"></script>
   <script src="methods/setDragMode.js"></script>
 </body>
 </html>
