--- a/test/options.html
+++ b/test/options.html
@@ -16,20 +16,24 @@
   <script src="js/main.js"></script>
   <script src="options/aspectRatio.js"></script>
   <script src="options/data.js"></script>
+  <!-- <script src="options/preview.js"></script> -->
   <script src="options/strict.js"></script>
+  <!-- <script src="options/responsive.js"></script> -->
   <!-- <script src="options/checkImageOrigin.js"></script> -->
-  <script src="options/background.js"></script>
+  <script src="options/modal.js"></script>
   <script src="options/guides.js"></script>
   <script src="options/center.js"></script>
   <script src="options/highlight.js"></script>
-  <script src="options/modal.js"></script>
+  <script src="options/background.js"></script>
   <script src="options/autoCrop.js"></script>
+  <!-- <script src="options/autoCropArea.js"></script> -->
   <script src="options/dragCrop.js"></script>
   <script src="options/movable.js"></script>
   <script src="options/rotatable.js"></script>
   <script src="options/scalable.js"></script>
   <script src="options/zoomable.js"></script>
   <script src="options/mouseWheelZoom.js"></script>
+  <!-- <script src="options/wheelZoomRatio.js"></script> -->
   <script src="options/touchDragZoom.js"></script>
   <script src="options/cropBoxMovable.js"></script>
   <script src="options/cropBoxResizable.js"></script>
