Add link for more projects

--- a/demo/index.html
+++ b/demo/index.html
@@ -39,6 +39,7 @@
           <li><a href="http://github.com/fengyuanchen/cropper/blob/master/README.md">Docs</a></li>
           <li><a href="http://github.com/fengyuanchen/cropper">Github</a></li>
           <li><a href="http://chenfengyuan.com">About</a></li>
+          <li><a href="https://fengyuanchen.github.io">More</a></li>
         </ul>
       </nav>
     </div>
