--- a/demo/index.html
+++ b/demo/index.html
@@ -36,9 +36,9 @@
       <nav class="collapse navbar-collapse" id="navbar-collapse-1" role="navigation">
         <p class="navbar-text">A simple jQuery image cropping plugin.</p>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="http://github.com/fengyuanchen/cropper/blob/master/README.md">Docs</a></li>
-          <li><a href="http://github.com/fengyuanchen/cropper">Github</a></li>
-          <li><a href="http://chenfengyuan.com">About</a></li>
+          <li><a href="https://github.com/fengyuanchen/cropper/blob/master/README.md">Docs</a></li>
+          <li><a href="https://github.com/fengyuanchen/cropper">Github</a></li>
+          <li><a href="https://chenfengyuan.com">About</a></li>
           <li><a href="https://fengyuanchen.github.io">More</a></li>
         </ul>
       </nav>
