--- a/demo/index.html
+++ b/demo/index.html
@@ -65,36 +65,36 @@
 
         <!-- <h3 class="page-header">Data:</h3> -->
         <div class="docs-data">
-          <div class="input-group">
+          <div class="input-group input-group-sm">
             <label class="input-group-addon" for="dataX">X</label>
             <input type="text" class="form-control" id="dataX" placeholder="x">
             <span class="input-group-addon">px</span>
           </div>
-          <div class="input-group">
+          <div class="input-group input-group-sm">
             <label class="input-group-addon" for="dataY">Y</label>
             <input type="text" class="form-control" id="dataY" placeholder="y">
             <span class="input-group-addon">px</span>
           </div>
-          <div class="input-group">
+          <div class="input-group input-group-sm">
             <label class="input-group-addon" for="dataWidth">Width</label>
             <input type="text" class="form-control" id="dataWidth" placeholder="width">
             <span class="input-group-addon">px</span>
           </div>
-          <div class="input-group">
+          <div class="input-group input-group-sm">
             <label class="input-group-addon" for="dataHeight">Height</label>
             <input type="text" class="form-control" id="dataHeight" placeholder="height">
             <span class="input-group-addon">px</span>
           </div>
-          <div class="input-group">
+          <div class="input-group input-group-sm">
             <label class="input-group-addon" for="dataRotate">Rotate</label>
             <input type="text" class="form-control" id="dataRotate" placeholder="rotate">
             <span class="input-group-addon">deg</span>
           </div>
-          <div class="input-group">
+          <div class="input-group input-group-sm">
             <label class="input-group-addon" for="dataScaleX">ScaleX</label>
             <input type="text" class="form-control" id="dataScaleX" placeholder="scaleX">
           </div>
-          <div class="input-group">
+          <div class="input-group input-group-sm">
             <label class="input-group-addon" for="dataScaleY">ScaleY</label>
             <input type="text" class="form-control" id="dataScaleY" placeholder="scaleY">
           </div>
