Update docs with new changes

--- a/demo/index.html
+++ b/demo/index.html
@@ -167,13 +167,13 @@
         </div>
 
         <div class="btn-group">
-          <button type="button" class="btn btn-primary" data-flip="horizontal" data-method="scale" data-option="-1" data-second-option="1" title="Flip Horizontal">
-            <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;scale&quot;, -1, 1)">
+          <button type="button" class="btn btn-primary" data-method="scaleX" data-option="-1" title="Flip Horizontal">
+            <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;scaleX&quot;, -1)">
               <span class="fa fa-arrows-h"></span>
             </span>
           </button>
-          <button type="button" class="btn btn-primary" data-flip="vertical" data-method="scale" data-option="1" data-second-option="-1" title="Flip Vertical">
-            <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;scale&quot;, 1, -1)">
+          <button type="button" class="btn btn-primary" data-method="scaleY" data-option="-1" title="Flip Vertical">
+            <span class="docs-tooltip" data-toggle="tooltip" title="$().cropper(&quot;scaleY&quot;-1)">
               <span class="fa fa-arrows-v"></span>
             </span>
           </button>
