--- a/test/options.html
+++ b/test/options.html
@@ -14,7 +14,7 @@
   <script src="../assets/js/jquery.min.js"></script>
   <script src="../dist/cropper.js"></script>
   <script src="js/main.js"></script>
-  <script src="options/mode.js"></script>
+  <script src="options/viewMode.js"></script>
   <script src="options/aspectRatio.js"></script>
   <script src="options/data.js"></script>
   <!-- <script src="options/preview.js"></script> -->
