--- a/test/options.html
+++ b/test/options.html
@@ -33,7 +33,7 @@
   <script src="options/scalable.js"></script>
   <script src="options/zoomable.js"></script>
   <script src="options/zoomOnTouch.js"></script>
-  <script src="options/mouseWheelZoom.js"></script>
+  <script src="options/zoomOnWheel.js"></script>
   <!-- <script src="options/wheelZoomRatio.js"></script> -->
   <script src="options/cropBoxMovable.js"></script>
   <script src="options/cropBoxResizable.js"></script>
