--- a/examples/customize-preview.html
+++ b/examples/customize-preview.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Customize Preview for Cropper.">
+  <meta name="description" content="Customize preview for Cropper">
   <meta name="keywords" content="HTML, CSS, JS, JavaScript, jQuery plugin, image cropping, image crop, image move, image zoom, image rotate, image scale, front-end, frontend, web development">
   <meta name="author" content="Fengyuan Chen">
   <title>Cropper</title>
@@ -20,7 +20,7 @@
 <body>
 
   <div class="container">
-    <h1 class="page-header">Customize Preview for Cropper</h1>
+    <h1 class="page-header">Customize preview for Cropper</h1>
     <div class="row">
       <div class="col-sm-6">
         <h3 class="page-header">Cropper</h3>
