--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,6 @@
   <title>Cropper</title>
   <link rel="stylesheet" href="../assets/css/font-awesome.min.css">
   <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../assets/css/tooltip.min.css">
   <link rel="stylesheet" href="../dist/cropper.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -51,7 +50,7 @@
       <div class="col-md-9">
         <!-- <h3 class="page-header">Demo:</h3> -->
         <div class="img-container">
-          <img src="../assets/img/picture.jpg" alt="Picture">
+          <img id="image" src="../assets/img/picture.jpg" alt="Picture">
         </div>
       </div>
       <div class="col-md-3">
@@ -505,7 +504,6 @@
 
   <!-- Scripts -->
   <script src="../assets/js/jquery.min.js"></script>
-  <script src="../assets/js/tooltip.min.js"></script>
   <script src="../assets/js/bootstrap.min.js"></script>
   <script src="../dist/cropper.js"></script>
   <script src="js/main.js"></script>
