--- a/examples/full-crop-box.html
+++ b/examples/full-crop-box.html
@@ -4,9 +4,6 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Cropper with full crop box">
-  <meta name="keywords" content="HTML, CSS, JS, JavaScript, jQuery plugin, image cropping, image crop, image move, image zoom, image rotate, image scale, front-end, frontend, web development">
-  <meta name="author" content="Fengyuan Chen">
   <title>Cropper</title>
   <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="../dist/cropper.css">
@@ -19,12 +16,6 @@
       max-width: 100%;
     }
   </style>
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
 </head>
 <body>
 
@@ -45,6 +36,7 @@
         viewMode: 3,
         dragMode: 'move',
         autoCropArea: 1,
+        restore: false,
         modal: false,
         guides: false,
         highlight: false,
