--- a/demo/index.html
+++ b/demo/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -252,7 +252,7 @@
               <div class="modal-body"></div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <a class="btn btn-primary" id="download" download="cropped.png" href="javascript:void(0);">Download</a>
+                <a class="btn btn-primary" id="download" href="javascript:void(0);" download="cropped.png">Download</a>
               </div>
             </div>
           </div>
@@ -389,6 +389,12 @@
               <label class="checkbox-inline">
                 <input type="checkbox" name="responsive" checked>
                 responsive
+              </label>
+            </li>
+            <li role="presentation">
+              <label class="checkbox-inline">
+                <input type="checkbox" name="restore" checked>
+                restore
               </label>
             </li>
             <li role="presentation">
