--- a/examples/cropper-in-modal.html
+++ b/examples/cropper-in-modal.html
@@ -19,12 +19,12 @@
     <h1 class="page-header">Cropper in a Bootstrap modal</h1>
 
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal">
+    <button type="button" class="btn btn-primary btn-lg" data-target="#modal" data-toggle="modal">
       Launch demo modal
     </button>
 
     <!-- Modal -->
-    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+    <div class="modal fade" id="modal" aria-labelledby="modalLabel" role="dialog" tabindex="-1">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
