--- a/examples/customize-preview.html
+++ b/examples/customize-preview.html
@@ -16,7 +16,7 @@
       <div class="col-sm-6">
         <h3 class="page-header">Cropper</h3>
         <div>
-          <img id="image" class="img-responsive" src="../assets/img/picture.jpg" alt="Picture">
+          <img class="img-responsive" id="image" src="../assets/img/picture.jpg" alt="Picture">
         </div>
       </div>
       <div class="col-sm-6">
