--- a/demo/index.html
+++ b/demo/index.html
@@ -36,7 +36,7 @@
         <p class="navbar-text">A simple jQuery image cropping plugin.</p>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="https://github.com/fengyuanchen/cropper/blob/master/README.md">Docs</a></li>
-          <li><a href="https://github.com/fengyuanchen/cropper">Github</a></li>
+          <li><a href="https://github.com/fengyuanchen/cropper">GitHub</a></li>
           <li><a href="http://chenfengyuan.com">About</a></li>
           <li><a href="http://fengyuanchen.github.io">More</a></li>
         </ul>
