--- a/demo/index.html
+++ b/demo/index.html
@@ -20,8 +20,12 @@
   <![endif]-->
 </head>
 <body>
-  <!-- header -->
-  <header class="navbar navbar-inverse navbar-static-top docs-header" id="top">
+  <!--[if lt IE 8]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
+
+  <!-- Header -->
+  <header class="navbar navbar-static-top docs-header" id="top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-target="#navbar-collapse-1" data-toggle="collapse">
@@ -33,7 +37,6 @@
         <a class="navbar-brand" href="./">Cropper</a>
       </div>
       <nav class="collapse navbar-collapse" id="navbar-collapse-1" role="navigation">
-        <p class="navbar-text">A simple jQuery image cropping plugin.</p>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="https://github.com/fengyuanchen/cropper/blob/master/README.md">Docs</a></li>
           <li><a href="https://github.com/fengyuanchen/cropper">GitHub</a></li>
@@ -43,6 +46,14 @@
       </nav>
     </div>
   </header>
+
+  <!-- Jumbotron -->
+  <div class="jumbotron docs-jumbotron">
+    <div class="container">
+      <h1>Cropper</h1>
+      <p class="lead">A simple jQuery image cropping plugin.</p>
+    </div>
+  </div>
 
   <!-- Content -->
   <div class="container">
