--- a/demo/index.html
+++ b/demo/index.html
@@ -28,7 +28,7 @@
   <header class="navbar navbar-static-top docs-header" id="top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-target="#navbar-collapse-1" data-toggle="collapse">
+        <button type="button" class="navbar-toggle" data-target="#navbar-collapse" data-toggle="collapse">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -36,7 +36,7 @@
         </button>
         <a class="navbar-brand" href="./">Cropper</a>
       </div>
-      <nav class="collapse navbar-collapse" id="navbar-collapse-1" role="navigation">
+      <nav class="collapse navbar-collapse" id="navbar-collapse" role="navigation">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="https://github.com/fengyuanchen/cropper/blob/master/README.md">Docs</a></li>
           <li><a href="https://github.com/fengyuanchen/cropper">GitHub</a></li>
