--- a/demo/index.html
+++ b/demo/index.html
@@ -40,7 +40,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="https://github.com/fengyuanchen/cropper/blob/master/README.md">Docs</a></li>
           <li><a href="https://github.com/fengyuanchen/cropper">GitHub</a></li>
-          <li><a href="//fengyuanchen.github.io">More</a></li>
+          <li><a href="https://fengyuanchen.github.io">More</a></li>
           <li><a href="http://chenfengyuan.com">About</a></li>
         </ul>
       </nav>
