--- a/test/options.html
+++ b/test/options.html
@@ -46,5 +46,6 @@
   <script src="options/minCropBoxHeight.js"></script>
   <script src="options/minContainerWidth.js"></script>
   <script src="options/minContainerHeight.js"></script>
+  <script src="options/fitCanvasToContainer.js"></script>
 </body>
 </html>
