Changed name of the option to rotateMode as discussed.

--- a/test/options.html
+++ b/test/options.html
@@ -46,6 +46,6 @@
   <script src="options/minCropBoxHeight.js"></script>
   <script src="options/minContainerWidth.js"></script>
   <script src="options/minContainerHeight.js"></script>
-  <script src="options/fitCanvasToContainer.js"></script>
+  <script src="options/rotateMode.js"></script>
 </body>
 </html>
