Adding option for specifying the a max-width for the cropper

--- a/test/options.html
+++ b/test/options.html
@@ -44,6 +44,8 @@
   <script src="options/minCanvasHeight.js"></script>
   <script src="options/minCropBoxWidth.js"></script>
   <script src="options/minCropBoxHeight.js"></script>
+  <script src="options/maxCropBoxWidth.js"></script>
+  <script src="options/maxCropBoxHeight.js"></script>
   <script src="options/minContainerWidth.js"></script>
   <script src="options/minContainerHeight.js"></script>
 </body>
