--- a/examples/crop-avatar/index.html
+++ b/examples/crop-avatar/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="A complete example of Cropper.">
   <meta name="keywords" content="HTML, CSS, JS, JavaScript, jQuery plugin, image cropping, image crop, image move, image zoom, image rotate, image scale, front-end, frontend, web development">
   <meta name="author" content="Fengyuan Chen">
   <title>Cropper</title>
-  <link rel="stylesheet" href="../../assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="../../dist/cropper.min.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -23,7 +23,7 @@
 
     <!-- Current avatar -->
     <div class="avatar-view" title="Change the avatar">
-      <img src="img/picture.jpg" alt="Avatar">
+      <img src="images/picture.jpg" alt="Avatar">
     </div>
 
     <!-- Cropping modal -->
@@ -91,8 +91,8 @@
     <div class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
   </div>
 
-  <script src="../../assets/js/jquery.min.js"></script>
-  <script src="../../assets/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="../../dist/cropper.min.js"></script>
   <script src="js/main.js"></script>
 </body>
