--- a/examples/a-range-of-aspect-ratio.html
+++ b/examples/a-range-of-aspect-ratio.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Cropper</title>
-  <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="../dist/cropper.css">
   <style>
     .container {
-      max-width: 960px;
+      max-width: 640px;
+      margin: 20px auto;
     }
 
     img {
@@ -20,15 +20,14 @@
 <body>
 
   <div class="container">
-    <h1 class="page-header">Cropper with a range of aspect ratio</h1>
+    <h1>Cropper with a range of aspect ratio</h1>
     <div>
-      <img id="image" src="../assets/img/picture.jpg" alt="Picture">
+      <img id="image" src="../docs/images/picture.jpg" alt="Picture">
     </div>
   </div>
 
   <!-- Scripts -->
-  <script src="../assets/js/jquery.min.js"></script>
-  <script src="../assets/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="../dist/cropper.js"></script>
   <script>
     $(function () {
@@ -37,7 +36,7 @@
       var maxAspectRatio = 1.5;
 
       $image.cropper({
-        built: function () {
+        ready: function () {
           var containerData = $image.cropper('getContainerData');
           var cropBoxData = $image.cropper('getCropBoxData');
           var aspectRatio = cropBoxData.width / cropBoxData.height;
