--- a/examples/customize-preview.html
+++ b/examples/customize-preview.html
@@ -3,50 +3,76 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Cropper</title>
-  <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="../dist/cropper.css">
+  <style>
+    .container {
+      max-width: 960px;
+      margin: 20px auto;
+    }
+
+    img {
+      max-width: 100%;
+    }
+
+    .row,
+    .preview {
+      overflow: hidden;
+    }
+
+    .col {
+      float: left;
+    }
+
+    .col-6 {
+      width: 50%;
+    }
+
+    .col-3 {
+      width: 25%;
+    }
+
+    .col-2 {
+      width: 16.7%;
+    }
+
+    .col-1 {
+      width: 8.3%;
+    }
+  </style>
 </head>
 <body>
 
   <div class="container">
-    <h1 class="page-header">Customize preview for Cropper</h1>
+    <h1>Customize preview for Cropper</h1>
+    <h3>Cropper</h3>
     <div class="row">
-      <div class="col-sm-6">
-        <h3 class="page-header">Cropper</h3>
-        <div>
-          <img class="img-responsive" id="image" src="../assets/img/picture.jpg" alt="Picture">
-        </div>
+      <div class="col col-6">
+        <img id="image" src="../docs/images/picture.jpg" alt="Picture">
       </div>
-      <div class="col-sm-6">
-        <h3 class="page-header">Preview</h3>
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="preview"></div>
-          </div>
-          <div class="col-sm-4">
-            <div class="preview"></div>
-          </div>
-          <div class="col-sm-2">
-            <div class="preview"></div>
-          </div>
-        </div>
+      <div class="col col-3">
+        <div class="preview"></div>
+      </div>
+      <div class="col col-2">
+        <div class="preview"></div>
+      </div>
+      <div class="col col-1">
+        <div class="preview"></div>
       </div>
     </div>
   </div>
 
   <!-- Scripts -->
-  <script src="../assets/js/jquery.min.js"></script>
-  <script src="../assets/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="../dist/cropper.js"></script>
   <script>
     $(function () {
       var $previews = $('.preview');
 
       $('#image').cropper({
-          build: function (e) {
-            var $clone = $(this).clone();
+          ready: function (e) {
+            var $clone = $(this).clone().removeClass('cropper-hidden');
 
             $clone.css({
               display: 'block',
