--- a/examples/multiple-croppers.html
+++ b/examples/multiple-croppers.html
@@ -3,22 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Cropper</title>
-  <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="../dist/cropper.css">
   <style>
     .container {
-      max-width: 960px;
+      max-width: 640px;
       margin: 20px auto;
     }
 
-    .img-container {
-      width: 100%;
-      margin-top: 10px;
-    }
-
-    .img-container img {
+    img {
       width: 100%;
     }
   </style>
@@ -26,30 +20,23 @@
 <body>
 
   <div class="container">
-    <h1 class="page-header">Multiple Croppers</h1>
-    <div class="row">
-      <div class="col-sm-6">
-        <h3>Cropper</h3>
-        <div class="img-container">
-          <img src="../assets/img/picture.jpg" alt="Picture">
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <h3>Another</h3>
-        <div class="img-container">
-          <img src="../assets/img/picture.jpg" alt="Picture">
-        </div>
-      </div>
+    <h1>Multiple Croppers</h1>
+    <h3>Cropper</h3>
+    <div>
+      <img src="../docs/images/picture.jpg" alt="Picture">
+    </div>
+    <h3>Another</h3>
+    <div>
+      <img src="../docs/images/picture.jpg" alt="Picture">
     </div>
   </div>
 
   <!-- Scripts -->
-  <script src="../assets/js/jquery.min.js"></script>
-  <script src="../assets/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="../dist/cropper.js"></script>
   <script>
     $(function () {
-      $('.img-container > img').cropper();
+      $('img').cropper();
     });
   </script>
 </body>
