docs: update author name

--- a/examples/crop-avatar/index.html
+++ b/examples/crop-avatar/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="A complete example of Cropper.">
   <meta name="keywords" content="HTML, CSS, JS, JavaScript, jQuery plugin, image cropping, image crop, image move, image zoom, image rotate, image scale, front-end, frontend, web development">
-  <meta name="author" content="Fengyuan Chen">
+  <meta name="author" content="Chen Fengyuan">
   <title>Cropper</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="../../dist/cropper.min.css">
