FileInputBootstrap: Using the bootstrap.js button for uploading file. Added only supporting image extentions for upload form.

--- a/examples/crop-avatar/index.html
+++ b/examples/crop-avatar/index.html
@@ -42,8 +42,10 @@
                 <div class="avatar-upload">
                   <input type="hidden" class="avatar-src" name="avatar_src">
                   <input type="hidden" class="avatar-data" name="avatar_data">
-                  <label for="avatarInput">Local upload</label>
-                  <input type="file" class="avatar-input" id="avatarInput" name="avatar_file">
+                  <label class="btn btn-primary avatar-input-label" for="avatarInput">
+                    <input type="file" accept=".jpg,.jpeg,.png,.gif" class="avatar-input" id="avatarInput" name="avatar_file">
+                    ⇓ Local upload file...
+                  </label>
                 </div>
 
                 <!-- Crop and preview -->
