--- a/examples/crop-avatar/index.html
+++ b/examples/crop-avatar/index.html
@@ -44,7 +44,7 @@
                   <input type="hidden" class="avatar-data" name="avatar_data">
                   <label class="btn btn-primary avatar-input-label" for="avatarInput">
                     <input type="file" accept=".jpg,.jpeg,.png,.gif" class="avatar-input" id="avatarInput" name="avatar_file">
-                    ⇓ Local upload file...
+                    Local upload
                   </label>
                 </div>
 
